<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.result.ResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:id="@+id/tallestHeightTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_twice_normal"
        android:text="@string/taller_than"
        android:textAllCaps="true"
        android:textColor="?attr/colorOnPrimary"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:icon="@drawable/ic_drop_down"
        style="@style/DropDownButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tallest_result_country_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:nestedScrollingEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tallestHeightTextview" />


    <Button
        android:id="@+id/shortestHeightTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_twice_normal"
        android:text="@string/shorter_than"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:icon="@drawable/ic_drop_down"
        style="@style/DropDownButton"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tallest_result_country_recyclerview" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shortest_result_country_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        android:nestedScrollingEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortestHeightTextview" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>